Body margin-bottom gap fix

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,5 +1,6 @@
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
+	margin: 0;
 	position: relative;
 	min-height: 100vh;
 }
